facing issues
>first container title overlapping list items dont know why

--- a/homepage.css
+++ b/homepage.css
@@ -101,8 +101,6 @@ button:hover{
     position: absolute;
     top: 24%;
 
-  
-
     float: left;
     width: 27%;
     height: 48%;
@@ -121,7 +119,6 @@ button:hover{
     box-shadow:2px 2px 15px grey; 
 }
 .contentbox ul a{
-    position: relative;
     text-align: center;
     text-decoration: none;
     color: #588BAE;
@@ -131,7 +128,7 @@ button:hover{
     color: black;
 }
 .contentbox p{
-    position: relative;
+    
     text-align: center;
     text-decoration: none;
     color: black;
